@@ -1,18 +1,20 @@
 package com.salonflow.backend.service.Impl;
 
 import com.salonflow.backend.controller.dtos.CustomerCreateDTO;
-import com.salonflow.backend.controller.dtos.CustomerListDTO;
+import com.salonflow.backend.controller.dtos.CustomerDTO;
+import com.salonflow.backend.controller.dtos.ScheduleDTO;
 import com.salonflow.backend.controller.dtos.response.CustomerResponseDTO;
 import com.salonflow.backend.domain.model.Customer;
 import com.salonflow.backend.domain.repository.CustomerRepository;
+import com.salonflow.backend.service.CustomerService;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.UUID;
 
 @Service
-public class CustomerServiceImpl {
+public class CustomerServiceImpl implements CustomerService {
 
     private final CustomerRepository customerRepository;
 
@@ -20,35 +22,37 @@ public class CustomerServiceImpl {
         this.customerRepository = customerRepository;
     }
 
-    public Customer findOrCreateByTelefone(CustomerCreateDTO dto){
+    @Override
+    public Customer findOrCreateByPhone(CustomerCreateDTO dto){
 
-
-        Optional<Customer> customerGetByPhone = customerRepository.findByPhone(dto.phone());
-
-        if (customerGetByPhone.isPresent()){
-            return customerGetByPhone.get();
-        }
-
-
-        Customer customer = new Customer();
-        customer.setName(dto.name());
-        customer.setPhone(dto.phone());
-
-        return customerRepository.save(customer);
+        return customerRepository.findByPhone(dto.phone())
+                .orElseGet(() -> {
+                    Customer customer = new Customer();
+                    customer.setName(dto.name());
+                    customer.setPhone(dto.phone());
+                    return customerRepository.save(customer);
+                });
     }
 
-    public List<CustomerListDTO> listAllCustomers(){
+    @Override
+    public List<CustomerDTO> listAllCustomers() {
 
         return customerRepository.findAll().stream()
-                .map(customer -> new CustomerListDTO(
+                .map(customer -> new CustomerDTO(
                         customer.getId(),
                         customer.getName(),
                         customer.getPhone(),
-                        Optional.empty())).collect(Collectors.toList());
-
+                        customer.getCreated_at(),
+                        customer.getSchedules()
+                                .stream()
+                                .map(ScheduleDTO::fromEntity)
+                                .toList()
+                ))
+                .toList();
     }
 
 
+    @Override
     public CustomerResponseDTO findCustomerByPhone(String phone) {
 
 
@@ -59,6 +63,33 @@ public class CustomerServiceImpl {
                         customer.getPhone(),
                         customer.getCreated_at()
                 )).orElseThrow(() -> new RuntimeException("Customer not found"));
+
+    }
+
+    @Override
+    public CustomerDTO findWithSchedules(UUID id) {
+
+        Optional<Customer> customerOptional = customerRepository.findByIDWithSchedules(id);
+
+        if (customerOptional.isEmpty()){
+            throw new RuntimeException("Customer not found");
+        }
+
+        Customer customer = customerOptional.get();
+
+        List<ScheduleDTO> scheduleDTOs = customer.getSchedules()
+                .stream()
+                .map(ScheduleDTO::fromEntity)
+                .toList();
+
+        return new CustomerDTO(
+                customer.getId(),
+                customer.getName(),
+                customer.getPhone(),
+                customer.getCreated_at(),
+                scheduleDTOs
+        );
+
 
     }
 }
